[package]
name = "media"
version = "0.1.0"
authors = ["Derek Russell russellderek01@gmail.com"]
edition = "2021"

license = "MIT OR Apache-2.0"

description = "A basic library for getting IMDB id's from a movie title"
repository = "https://github.com/drkrssll/lib-imdb/"
homepage = "https://github.com/drkrssll/lib-imdb/"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.17"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
open = "5.3.1"
